compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__underscore_after_binary_prefix.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\npub fn main() {\n  0b_10_01\n}\n"
---
----- SOURCE CODE

pub fn main() {
  0b_10_01
}


----- COMPILED JAVASCRIPT
export function main() {
  return 0b10_01;
}
