compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__underscore_after_decimal_point.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\npub fn main() {\n  0._1\n}\n"
---
----- SOURCE CODE

pub fn main() {
  0._1
}


----- COMPILED JAVASCRIPT
export function main() {
  return 0.1;
}
