compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__underscore_after_hexadecimal_prefix.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\npub fn main() {\n  0x_12_34\n}\n"
---
----- SOURCE CODE

pub fn main() {
  0x_12_34
}


----- COMPILED JAVASCRIPT
export function main() {
  return 0x12_34;
}
