compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__underscore_after_zero_after_binary_prefix.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\npub fn main() {\n  0b0_1_0_1\n}\n"
---
----- SOURCE CODE

pub fn main() {
  0b0_1_0_1
}


----- COMPILED JAVASCRIPT
export function main() {
  return 0b1_0_1;
}
