compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__underscore_after_zero_after_hex_prefix.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\npub fn main() {\n  0x0_1_2_3\n}\n"
---
----- SOURCE CODE

pub fn main() {
  0x0_1_2_3
}


----- COMPILED JAVASCRIPT
export function main() {
  return 0x1_2_3;
}
