compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__zero_after_underscore_after_hex_prefix.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\npub fn main() {\n  0x_0_1_2_3\n}\n"
---
----- SOURCE CODE

pub fn main() {
  0x_0_1_2_3
}


----- COMPILED JAVASCRIPT
export function main() {
  return 0x1_2_3;
}
